// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatHeader /> renders correctly 1`] = `
<header
  className="MuiPaper-root-74 MuiPaper-elevation4-80 MuiAppBar-root-66 MuiAppBar-positionAbsolute-68 MuiAppBar-colorPrimary-72 ChatHeader-appBar-64"
>
  <div
    className="MuiToolbar-root-101 MuiToolbar-gutters-102"
    color="contrast"
  >
    Avatar
    <h2
      className="MuiTypography-root-103 MuiTypography-title-109 ChatHeader-appBarTitle-65"
    >
      My Chat
      ChatMenu
    </h2>
    UserMenu
  </div>
</header>
`;

exports[`<ChatHeader /> renders without active chat 1`] = `
<header
  className="MuiPaper-root-74 MuiPaper-elevation4-80 MuiAppBar-root-66 MuiAppBar-positionAbsolute-68 MuiAppBar-colorPrimary-72 ChatHeader-appBar-64"
>
  <div
    className="MuiToolbar-root-101 MuiToolbar-gutters-102"
    color="contrast"
  >
    <h2
      className="MuiTypography-root-103 MuiTypography-title-109 MuiTypography-colorInherit-122 MuiTypography-noWrap-119 ChatHeader-appBarTitle-65"
    >
      React Chat
    </h2>
    UserMenu
  </div>
</header>
`;
